--- a/gaussian-filters/unscented-kalman-filter.ipynb
+++ b/gaussian-filters/unscented-kalman-filter.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "adee267c",
    "metadata": {},
    "outputs": [],
@@ -314,12 +314,12 @@
     "\n",
     "        # correct the predicted state statistics\n",
     "        self.x = self.x_pred + np.dot(self.K, self.v)\n",
-    "        self.Sigma = self.Sigma_pred - np.dot(np.dot(self.K, self.S), self.K.T)"
+    "        self.Sigma = self.Sigma_pred - nps.dot(np.dot(self.K, self.S), self.K.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "a25ba6a8",
    "metadata": {},
    "outputs": [
